# CPP-TS-WASM-Scripting

./: CMakeLists.txt  README.md
assets/: prelude.ts
assets/scripts/: script.ts
src/: main.cpp
src/script/: HostFunctions.cpp  ScriptInstance.cpp  ScriptInstance.hpp
